...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/card_back" />

            <TextView
                android:id="@+id/cardNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Name"
                android:textSize="34sp"
                android:textStyle="bold"
...
